<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rss_name_label"/>

    <EditText
        android:id="@+id/rss_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/rss_name_placeholder"/>

    <TextView
        android:id="@+id/rss_url_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twitter_term_label"/>

    <EditText
        android:id="@+id/twitter_term"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/twitter_term_placeholder"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancel_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rss_cancel"/>

        <Button
            android:id="@+id/save_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rss_save"/>

    </LinearLayout>


</LinearLayout>