<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
          xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_add_twitter"
        android:icon="@drawable/ic_social_twitter"
        android:title="@string/twitter_menu"
        />
    <item
        android:id="@+id/menu_add_rss"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/rss_menu"
        />
    <item
        android:id="@+id/menu_remove_rss"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit_feed"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/menu_item_options"
        android:icon="@drawable/ic_wrench"
        android:title="@string/settings"
        app:showAsAction="always" />

</menu>
